--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -1187,6 +1187,27 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
     margin-bottom: 6px;
 }
 
+.formfieldL { font-family: Tahoma Arial, Helvetica, sans-serif;
+	font-size: 11px;
+    color: #4D4D4D;
+    background-color: white;
+    border-width: 0px;
+    width: 25px !important;
+    margin-left: 4px;
+    margin-right: 9px;
+    margin-top: 1px;
+    margin-bottom: 7px;
+}
+
+.formfieldL_BG { background-image: url(../images/formfieldM_BG_L.gif);
+	
+    background-repeat: no-repeat;
+    width: 40px !important;
+    height: 26px;
+    margin-bottom: 6px;
+	
+}
+
 .formtextareaL4 { font-family: Tahoma Arial, Helvetica, sans-serif;
     font-size: 11px;
     color: #4D4D4D;
