Fixes #193: Create About button with full licensing information. Submitted by tom
git-svn-id: https://svn.clinovo.com/clincapture/trunk@152 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles_hf.css
+++ b/web/src/main/webapp/includes/styles_hf.css
@@ -53,6 +53,15 @@ body {
 	min-height: 460px;
 	}
 
+#about-content {
+	background-image: url(../images/dots.gif);
+	background-repeat: repeat-y;
+	background-position: left;
+	padding: 1px 55px 30px 20px;
+	margin-left: 10px;
+	min-height: 460px;
+	}
+
 #content td{
 	font-size: 11px;
 	}
