Fixes #8: Display build number at bottom of the screen, next to the version number. Submitted by sergey (with modifications)
git-svn-id: https://svn.clinovo.com/clincapture/trunk@225 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -367,7 +367,7 @@ li { font-family: Tahoma, Arial, Helvetica, Sans-Serif;
 
 td { font-family: Tahoma, Arial, Helvetica, Sans-Serif;
     font-size: 11px;
-    line-height: 15px;
+    line-height: 15px !important;
     color: #4D4D4D;
 }
 
