Fixes #311: Resolve jQuery conflicts and remove jq or jjq vars from the jsp & javascript. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@248 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/NewLoginStyles.css
+++ b/web/src/main/webapp/includes/NewLoginStyles.css
@@ -2,7 +2,7 @@
 
 /* general style propertyies */
 
-body.login_BG { background: url(../images/login_BG2.gif) repeat-x top left #FFFFFF; }
+body.login_BG { }
 
 div.login_BG { background: url(../images/login_BG.gif) no-repeat top center; height: 100%; padding-top: 117px; }
 
