Fixes #277: Center Names of Events under Dynamic Groups in Subject Matrix. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@259 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/jmesa/jmesa.css
+++ b/web/src/main/webapp/includes/jmesa/jmesa.css
@@ -150,11 +150,11 @@
 }
 
 .jmesa .odd td {
-    border: 1px solid #ffffff;
+    border: 1px none #ffffff;
 }
 
 .jmesa .even td {
-    border: 1px solid #e3e3e3;
+    border: 1px none #e3e3e3;
 }
 
 .jmesa .odd {
@@ -170,7 +170,7 @@
     font-size: 11px;
     vertical-align: top;
     line-height: 15px;
-    padding: 3px 4px 3px 4px;
+    padding: 2px 3px 2px 3px;
     background-color: #fdecae;
 }
 
