Fixes #337: Padding between event-icons and x2 in Subj Matrix should be smaller. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@283 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2042,8 +2042,15 @@ span.spanBack {
     color: #789EC5;
     text-decoration: none;
 }
+
 span.spanBack:hover {
     cursor: pointer;
     color: #789EC5;
     text-decoration: underline;
+}
+
+span.re_indicator {
+    margin-left: 4px;
+    margin-right: -20px;
+    white-space: nowrap;
 }
