Fixes #351: The SDV button on the second SDV tab is shown a little bit below. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@341 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2061,3 +2061,7 @@ table.crfListTable td {
     border-left: #CCCCCC 1px solid !important;
     padding-left: 2px !important;
 }
+
+#s_sdv tr input[name=sdvSubmit] {
+    margin-top: -2px;
+}
