--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -455,6 +455,12 @@ a:hover, a:active { color: #789EC5;
     background-color: #FFFFFF;
 }
 
+.box_T_a {
+    background-image: url("../images/box_T.gif");
+    background-repeat: repeat-x;
+    background-position: center top;
+}
+
 .box_L { background-image: url(../images/box_L.gif);
     background-repeat: repeat-y;
     background-position: left;
