Fixes #400: Sidebar that holds Events is slightly mangled. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@387 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -1290,9 +1290,13 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
 
 .vline_B { background-image: url(../images/leftbar_vline.gif);
     background-repeat: no-repeat;
-    background-position: top;
+    background-position: top left;
     padding-top: 6px;
     padding-left: 3px;
+}
+
+.vline_B img {
+    padding-bottom: 4px;
 }
 
 .leftmenu { padding-top: 6px;
