Fixes #410: Improvements to Dataset Workflow. Submitted by Sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@419 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2101,3 +2101,8 @@ table.crfListTable td {
     text-align: left;
     white-space: nowrap;
 }
+
+span.asterisk {
+    padding-left: 4px;
+    vertical-align: top;
+}
