--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2107,6 +2107,10 @@ span.asterisk {
     vertical-align: top;
 }
 
+#WzBoDy {
+    width: auto !important;
+}
+
 .pg-normal {
     color: #4d4d4d;
 }
