--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2139,3 +2139,18 @@ span.asterisk {
 .itemsTable tr {
     border-top: 1px #4d4d4d solid;
 }
+
+a.dnShortcut:active {
+    text-decoration: none !important;
+}
+
+a.dnShortcut:hover {
+    text-decoration: underline !important;
+}
+a.dnShortcut:active {
+    text-decoration: none !important;
+}
+
+a.dnShortcut:hover {
+    text-decoration: underline !important;
+}
