--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -1973,7 +1973,7 @@ div#sumBox table tr:first-child td { border-top-width: 0px;
 .taskLink { padding: 3px 10px 4px 10px; font-weight: bold; }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 #loginBox { width: 310px; }
