Fixes #638: Cursor should change from Insert to Pointer. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@698 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -1,8 +1,3 @@
-/*.sdvCheck{
-
-    margin-right:10px;
-}*/
-
 #studiesDiv {
     margin-top: 5px;
     margin-bottom: 5px;
@@ -2153,4 +2148,8 @@ a.dnShortcut:active {
 
 a.dnShortcut:hover {
     text-decoration: underline !important;
+}
+
+.pointed-span {
+    cursor: pointer;
 }
