Fixes #613: Use consistent font coloring in all pages. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@745 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -708,7 +708,7 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
     font-size: 14px;
     line-height: 18px;
     font-weight: bold;
-    color: #66CCCC;
+    color: #789EC5;
     padding-bottom: 6px;
 }
 
