Fixes #744: Update CRF Version creation to support coding fields. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@852 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2131,15 +2131,14 @@ span.asterisk {
 .itemsTable {
     border-collapse: collapse;
     width: 450px;
-    height: 340px;
+    height: 100px;
+    border-top: 1px #4d4d4d solid;
+    border-bottom: 1px #4d4d4d solid;
 }
 
 .itemsTable td {
     padding: 10px 0;
 }
-
-.itemsTable tr {
-    border-top: 1px #4d4d4d solid;
 }
 
 a.dnShortcut:active {
