Fixes #693: Implement shortcut to data entry. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@874 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2205,3 +2205,20 @@ a.dnShortcut:hover {
 .pointed-span {
     cursor: pointer;
 }
+
+.popup-box-buttons {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.popup-box-buttons input {
+    float: left;
+    cursor: pointer;
+    margin-left: 10px !important;
+}
+
+.popup-box-buttons input:first-child {
+    float: left;
+    cursor: pointer;
+    margin-left: 0px !important;
+}
