Fixes #818: Rework 'Executed Rules Report in Rule Assignment' Page. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@878 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2206,6 +2206,17 @@ a.dnShortcut:hover {
     cursor: pointer;
 }
 
+.rule-table-expression-td {
+    width: 450px;
+}
+
+.rule-table-action-summary-td {
+    width: 350px;
+}
+
+.action-summary-table {
+    width: 350px;
+}
 .popup-box-buttons {
     padding-top: 5px;
     padding-bottom: 5px;
