Fixes #858: Update Old Medical Coding UX to support new logic. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@930 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2185,7 +2185,6 @@ span.asterisk {
 .itemsTable td {
     padding: 10px 0;
 }
-}
 
 a.dnShortcut:active {
     text-decoration: none !important;
@@ -2232,4 +2231,22 @@ a.dnShortcut:hover {
     float: left;
     cursor: pointer;
     margin-left: 0px !important;
+}
+
+.loader {
+    position:fixed ;
+    width:300px;
+    height:100px;
+    z-index:15;
+    top:50%;
+    left:50%;
+    margin:-100px 0 0 -150px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px;
+    background: white;
+    background-image:url('../images/ajax-loader-blue.gif');
+    background-repeat: no-repeat;
+    background-position: 50% 70%;
+    border: solid 1px black;
 }
