Fixes #974: RS should be disabled while it loads the studies, crfs, items etc. Submitted by satoshi
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1088 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -324,3 +324,29 @@ td.ui-draggable {
 body .modal-dialog {
   width: 650px;
 }
+
+.spinner {
+
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  opacity: .9;
+  z-index:1000;
+  position:absolute;
+  background-color:transparent; 
+}
+
+.spinner * {
+  
+  left: 35%;
+  top: 45%;
+  display: block;    
+  margin-top: -20px;
+  margin-left: -45px;
+  position: absolute;
+}
+
+.selected {
+  font-weight: bold;
+}
