Fixes #990: Create new home page layout that will allow to add diff metrics for diff users. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1091 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/css/charts.css
+++ b/web/src/main/webapp/includes/css/charts.css
@@ -35,6 +35,7 @@ table.widgets_container td {
 	width:392px;
 	padding:5px;
 	border: 1px solid gray;
+	background-color:white;
 }
 
 .toolbar_wrapper h2 {
@@ -161,6 +162,7 @@ form#actionForSave input {
 .widget  table.signs {
 	margin: 15px 20px;
 	vertical-align:middle;
+	width:360px;
 }
 
 .widget table.signs  td{
