Fixes #984: Allow Login page to be labeled Development or Training. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1093 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/NewLoginStyles.css
+++ b/web/src/main/webapp/includes/NewLoginStyles.css
@@ -27,3 +27,10 @@ div.login_BG { background: url(../images/login_BG.gif) no-repeat top center; hei
 .loginBox li { margin-bottom: 13px; }
 
 .footer { background-image: url(../images/login_footer_BG.gif); }
+
+.dbTitle {
+    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
+    font-size: 24pt;
+    font-weight: bold;
+    color:  #ff0000;
+}
