Porting the #1029 fix from the 1.0.3.5.X maint branch
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1127 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2201,6 +2201,11 @@ a.dnShortcut:hover {
     cursor: pointer;
 }
 
+.message_box_confirmation {
+    display: block;
+	height:120px!important;
+}
+
 .rule-table-expression-td {
     width: 450px;
 }
