Fixes #1018: RS must support Insert Data action. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1128 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -350,3 +350,11 @@ body .modal-dialog {
 .selected {
   font-weight: bold;
 }
+
+.lbl {
+  margin-top: .5em;
+}
+
+.dest {
+  margin-left: -1em;
+}
