Fixes #1052: Make the ND description control non-resizable. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1149 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -1291,6 +1291,10 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
     margin-bottom: 7px;
 }
 
+.textarea_fixed_size {
+	resize: none;
+}
+
 .formtextareaXL4_BG { background-image: url(../images/formtextareaXL4_BG.gif);
     background-repeat: no-repeat;
     width: 257px;
